missed a fix for jar packaging

--- a/galleon/build.xml
+++ b/galleon/build.xml
@@ -1186,7 +1186,7 @@
 
         
         <antcall target="combinejars">
-          <param name="fileset" value="**/hibernate*.jar,**/ehcache*.jar,**/jta*.jar,**/odmg*.jar,**/cglib-*.jar,**/asm-*.jar,**/freemarker.jar,**/antlr*.jar"/>          
+          <param name="fileset" value="**/hibernate*.jar,**/ehcache*.jar,**/freemarker.jar,**/antlr*.jar"/>          
           <param name="jarfile" value="hibernate.jar"/>          
         </antcall>                
 
@@ -1218,7 +1218,7 @@
         
         <echo>Copying libraries</echo>
         <copy todir="${build}/lib/">
-            <fileset dir="./lib" includes="**/*.jar" excludes="**/commons*.jar,**/hibernate*.jar,**/ehcache*.jar,**/jta*.jar,**/odmg*.jar,**/cglib-*.jar,**/freemarker.jar,**/antlr*.jar,**/asm-*.jar,**/derby*.jar,**/jax*.jar,**/jl.jar,**/mp3spi*.jar,**/tritonus_share.jar,**/forms*.jar,**/looks*.jar,**/smack*.jar,**/smackx*.jar"/>
+            <fileset dir="./lib" includes="**/*.jar" excludes="**/commons*.jar,**/hibernate*.jar,**/ehcache*.jar,**/freemarker.jar,**/antlr*.jar,**/derby*.jar,**/jax*.jar,**/jl.jar,**/mp3spi*.jar,**/tritonus_share.jar,**/forms*.jar,**/looks*.jar,**/smack*.jar,**/smackx*.jar"/>
         </copy>        
 
         <antcall target="package-lib-${platform}" />
@@ -1227,7 +1227,7 @@
     <target name="package-lib-win32">
         <copy file="./lib/win32/jshortcut.dll" tofile="${build}/lib/jshortcut.dll" />
         <copy file="./lib/win32/Wrapper.dll" tofile="${build}/lib/Wrapper.dll" />
-        <copy file="./lib/jawin.jar" tofile="${build}/lib/jawin.jar" />
+<!-- copied by generic rule        <copy file="./lib/jawin.jar" tofile="${build}/lib/jawin.jar" /> -->
         <copy file="./lib/win32/jawin.dll" tofile="${build}/lib/jawin.dll" />
         <copy file="./lib/win32/TiVoBeacon.exe" tofile="${build}/lib/TiVoBeacon.exe" />
         <copy file="./lib/win32/TiVoBeaconApi.dll" tofile="${build}/lib/TiVoBeaconApi.dll" />
@@ -1264,7 +1264,7 @@
         <copy file="./bin/unix/gui.sh" tofile="${build}/bin/gui.sh" />
         <copy file="./bin/unix/run.sh" tofile="${build}/bin/run.sh" />
         <echo>Fixing permissions</echo>
-        <chmod file="${build}/bin/galleonctl" perm="a+rx" />
+        <chmod file="${build}/bin/galleon" perm="a+rx" />
         <chmod file="${build}/bin/Realpath" perm="a+rx" />
         <chmod file="${build}/bin/Wrapper" perm="a+rx" />
         <chmod file="${build}/bin/gui.sh" perm="a+rx" />
@@ -1281,7 +1281,7 @@
 
     <target name="package-lib-unix">
         <copy file="./lib/unix/libwrapper.so" tofile="${build}/lib/libwrapper.so" />
-        <copy file="./lib/pja-2.5.jar" tofile="${build}/lib/pja-2.5.jar" />        
+<!-- copied by generic copy        <copy file="./lib/pja.jar" tofile="${build}/lib/pja.jar" />         -->
     </target>
 
     <target name="package-bin-unix">
