--- a/galleon/build.xml
+++ b/galleon/build.xml
@@ -82,10 +82,12 @@
         <echo message="galleon log : ${logfile}" />
         <echo message="wrapper log : ${wrapperlog}" />
         <echo message="log path    : ${logs}" />
-        <echo message="apps path    : ${apps}" />        
-        <echo message="data path    : ${data}" />                
+        <echo message="apps path   : ${apps}" />        
+        <echo message="data path   : ${data}" />                
         <echo message="hme path    : ${hme}" />                  
-        <echo message="skins path    : ${skins}" />                                
+        <echo message="skins path  : ${skins}" />   
+    	<echo message="extra src   : ${extrasrc}"/>
+    	<echo message="otherplatsrc: ${otherplatsrc}"/>
 
         <filter token="lib" value="${lib}" />
         <filter token="win32comment" value="${win32comment}" />
@@ -102,7 +104,9 @@
         <filter token="data" value="${data}" />        
         <filter token="apps" value="${apps}" />        
         <filter token="hme" value="${hme}" />                
-        <filter token="skins" value="${skins}" />                
+        <filter token="skins" value="${skins}" />
+    	<filter token="extrasrc" value="${extrasrc}" />
+    	<filter token="otherplatsrc" value="${otherplatsrc}" />
 
         <property name="filtering" value="no" />
 
@@ -179,8 +183,9 @@
         <echo>Compiling Java sources</echo>
 
         <javac srcdir="${src}" destdir="${build}" debug="on" optimize="off" deprecation="off" verbose="off" source="5" target="5">
-            <include name="**/*.java" />
-            <exclude name="**/apps/camera,**/util/CameraDevice.java" />
+           		<include name="**/*.java" />
+            	<exclude name="${otherplatsrc}" />
+        		<include name="${extrasrc}"/>
             <classpath>
                 <path refid="class.path" />
             </classpath>
