--- a/galleon/.classpath
+++ b/galleon/.classpath
@@ -63,5 +63,6 @@
 	<classpathentry kind="lib" path="lib/concurrent.jar"/>
 	<classpathentry kind="lib" path="lib/browserlauncher.jar"/>
 	<classpathentry kind="lib" path="lib/bananas-1.3-custom.jar"/>
+	<classpathentry kind="lib" path="distro/osx/AppleJavaExtensions/AppleJavaExtensions.jar"/>
 	<classpathentry kind="output" path="binary"/>
 </classpath>
