--- a/galleon/.classpath
+++ b/galleon/.classpath
@@ -56,13 +56,13 @@
 	<classpathentry kind="lib" path="lib/ehcache-1.2.3.jar"/>
 	<classpathentry kind="lib" path="lib/antlr-2.7.6.jar"/>
 	<classpathentry kind="lib" path="lib/commons-betwixt-0.6.jar"/>
-	<classpathentry kind="lib" path="lib/hme-hd.jar" sourcepath="/hme-hd/src/java"/>
 	<classpathentry kind="lib" path="lib/htmlparser-1.6.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/jdbc2_0-stdext.jar"/>
 	<classpathentry kind="lib" path="lib/concurrent.jar"/>
 	<classpathentry kind="lib" path="lib/browserlauncher.jar"/>
 	<classpathentry kind="lib" path="lib/bananas-1.3-custom.jar"/>
+	<classpathentry kind="lib" path="lib/hme-hd-0.4.1.jar"/>
 	<classpathentry kind="lib" path="distro/osx/AppleJavaExtensions/AppleJavaExtensions.jar"/>
 	<classpathentry kind="output" path="binary"/>
 </classpath>
