--- a/galleon/distro/osx/bundles/Configure Galleon.app/Contents/Info.plist
+++ b/galleon/distro/osx/bundles/Configure Galleon.app/Contents/Info.plist
@@ -31,6 +31,7 @@
 		<key>ClassPath</key>
 		<array>
 			<string>$JAVAROOT/conf</string>
+			<string>$JAVAROOT/lib/axis.jar</string>
 			<string>$JAVAROOT/lib/asm-1.5.3.jar</string>
 			<string>$JAVAROOT/lib/bananas-1.3-custom.jar</string>
 			<string>$JAVAROOT/lib/browserlauncher.jar</string>
@@ -43,7 +44,7 @@
 			<string>$JAVAROOT/lib/galleon.jar</string>
 			<string>$JAVAROOT/lib/hibernate.jar</string>
 			<string>$JAVAROOT/lib/hme-1.4.jar</string>
-			<string>$JAVAROOT/lib/hme-hd.jar</string>
+			<string>$JAVAROOT/lib/hme-hd-0.4.1.jar</string>
 			<string>$JAVAROOT/lib/hme-host-sample-1.4.jar</string>
 			<string>$JAVAROOT/lib/htmlparser-1.6.jar</string>
 			<string>$JAVAROOT/lib/informa-0.7.0.jar</string>
