--- a/galleon/distro/osx/Info.plist
+++ b/galleon/distro/osx/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleGetInfoString</key>
-	<string>2.4.1 alpha</string>
+	<string>2.4.1</string>
 	<key>CFBundleIdentifier</key>
 	<string>org.lnicholls.galleon</string>
 	<key>CFBundleShortVersionString</key>
