--- a/galleon/.classpath
+++ b/galleon/.classpath
@@ -25,7 +25,7 @@
 	<classpathentry kind="lib" path="lib/derbynet-10.2.2.0.jar"/>
 	<classpathentry kind="lib" path="lib/derbytools-10.2.2.0.jar"/>
 	<classpathentry kind="lib" path="lib/hme-host-sample-1.4.jar"/>
-	<classpathentry kind="lib" path="lib/hme-1.4.jar"/>
+	<classpathentry kind="lib" path="lib/hme-1.4.jar" sourcepath="C:/java/hme_sdk_1.4/src"/>
 	<classpathentry kind="lib" path="lib/odmg.jar"/>
 	<classpathentry kind="lib" path="lib/yahoo_search-2.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.14.jar"/>
@@ -60,8 +60,9 @@
 	<classpathentry kind="lib" path="lib/jdbc2_0-stdext.jar"/>
 	<classpathentry kind="lib" path="lib/concurrent.jar"/>
 	<classpathentry kind="lib" path="lib/browserlauncher.jar"/>
-	<classpathentry kind="lib" path="lib/bananas-1.3-custom.jar"/>
+	<classpathentry kind="lib" path="lib/bananas-1.3-custom.jar" sourcepath="/bananas/src"/>
 	<classpathentry kind="lib" path="lib/hme-hd-0.4.1.jar"/>
 	<classpathentry kind="lib" path="distro/osx/AppleJavaExtensions/AppleJavaExtensions.jar"/>
+	<classpathentry kind="lib" path="ext/hdphotos.jar"/>
 	<classpathentry kind="output" path="binary"/>
 </classpath>
