--- a/galleon/distro/osx/bundles/Configure Galleon.app/Contents/Info.plist
+++ b/galleon/distro/osx/bundles/Configure Galleon.app/Contents/Info.plist
@@ -60,12 +60,14 @@
 			<string>$JAVAROOT/lib/js-1.6R5.jar</string>
 			<string>$JAVAROOT/lib/jshortcut-0.4.jar</string>
 			<string>$JAVAROOT/lib/jta-1.1.jar</string>
+			<string>$JAVAROOT/lib/jtidy-8.0-20060801.131059-3.jar</string>
 			<string>$JAVAROOT/lib/log4j-1.2.14.jar</string>
 			<string>$JAVAROOT/lib/mail-1.4.jar</string>
 			<string>$JAVAROOT/lib/mediamanager-videoman-0.8.jar</string>
 			<string>$JAVAROOT/lib/MHS-1.6.1-1697.jar</string>
 			<string>$JAVAROOT/lib/odmg.jar</string>
 			<string>$JAVAROOT/lib/smack.jar</string>
+			<string>$JAVAROOT/lib/saxon-8.7.jar</string>
 			<string>$JAVAROOT/lib/upcoming.jar</string>
 			<string>$JAVAROOT/lib/widgets.jar</string>
 			<string>$JAVAROOT/lib/wrapper-3.2.3.jar</string>
