added hdphotos stub jar.  Added unix install makefile and service layer wrapper

--- a/galleon/osx.properties
+++ b/galleon/osx.properties
@@ -9,6 +9,7 @@ cache=/tmp/galleon.cache
 headless=true
 logfile=../logs/galleon.log
 wrapperlog=../logs/wrapper.log
+wrapperconsoleloglevel=INFO
 logs=../logs
 data=${root}/data
 apps=${root}/apps
