--- a/galleon/unix.properties
+++ b/galleon/unix.properties
@@ -2,14 +2,13 @@ build=${basedir}/build
 unixcomment=#
 root=/usr/share/galleon
 lib=/usr/share/galleon/lib
-bin=/usr/bin/galleon
+bin=/usr/share/galleon/bin
 conf=/etc/galleon
-cache=/tmp/galleon.cache
-#logfile=/var/log/galleon.log
-logfile=../logs/log.txt
-wrapperlog=/var/log/wrapper.log
-#logs=/var/log
-logs=../logs
+cache=/var/cache/galleon
+logs=/var/log/galleon
+logfile=${logs}/log.txt
+wrapperlog=${logs}/wrapper.log
+wrapperconsoleloglevel=INFO
 data=${root}/data
 apps=${root}/apps
 hme=${root}/hme
