--- a/galleon/win32.properties
+++ b/galleon/win32.properties
@@ -7,6 +7,7 @@ conf=../conf
 cache=../data
 logfile=../logs/log.txt
 wrapperlog=../logs/wrapper.log
+wrapperconsoleloglevel=ERROR
 logs=../logs
 data=../data
 apps=../apps
