--- a/galleon/.classpath
+++ b/galleon/.classpath
@@ -63,8 +63,8 @@
 	<classpathentry kind="lib" path="lib/bananas-1.3-custom.jar" sourcepath="/bananas/src"/>
 	<classpathentry kind="lib" path="lib/hme-hd-0.4.1.jar"/>
 	<classpathentry kind="lib" path="distro/osx/AppleJavaExtensions/AppleJavaExtensions.jar"/>
-	<classpathentry kind="lib" path="ext/hdphotos.jar"/>
 	<classpathentry kind="lib" path="lib/jtidy-8.0-20060801.131059-3.jar"/>
 	<classpathentry kind="lib" path="lib/saxon-8.7.jar"/>
+	<classpathentry kind="lib" path="lib/hdphotos-stub.jar"/>
 	<classpathentry kind="output" path="binary"/>
 </classpath>
