--- a/galleon/build.xml
+++ b/galleon/build.xml
@@ -98,6 +98,7 @@
         <filter token="headless" value="${headless}" />
         <filter token="logfile" value="${logfile}" />
         <filter token="wrapperlog" value="${wrapperlog}" />
+        <filter token="wrapperconsoleloglevel" value="${wrapperconsoleloglevel}" />
         <filter token="logs" value="${logs}" />
         <filter token="bin" value="${bin}" />
         <filter token="data" value="${data}" />        
@@ -1264,7 +1265,7 @@
         
         <echo>Copying libraries</echo>
         <copy todir="${build}/lib/">
-            <fileset dir="./lib" includes="**/*.jar" excludes="**/axis*.jar,**/commons*.jar,**/hibernate*.jar,**/ehcache*.jar,**/freemarker.jar,**/antlr*.jar,**/derby*.jar,**/jax*.jar,**/jl.jar,**/mp3spi*.jar,**/tritonus_share.jar,**/forms*.jar,**/looks*.jar,**/smack*.jar,**/smackx*.jar"/>
+            <fileset dir="./lib" includes="**/*.jar" excludes="**/axis*.jar,**/commons*.jar,**/hibernate*.jar,**/ehcache*.jar,**/freemarker.jar,**/antlr*.jar,**/derby*.jar,**/jax*.jar,**/jl.jar,**/mp3spi*.jar,**/tritonus_share.jar,**/forms*.jar,**/looks*.jar,**/smack*.jar,**/smackx*.jar,**/hdphotos-stub.jar"/>
         </copy>        
 
         <antcall target="package-lib-${platform}" />
@@ -1306,7 +1307,7 @@
         <echo>Copying executables</echo>
         <copy file="./bin/osx/galleon" tofile="${build}/bin/galleon" />
         <copy file="./bin/osx/Realpath" tofile="${build}/bin/Realpath" />
-        <copy file="./bin/osx/Wrapper" tofile="${build}/bin/Wrapper" />
+        <copy file="./bin/osx/wrapper" tofile="${build}/bin/wrapper" />
         <copy file="./bin/unix/gui.sh" tofile="${build}/bin/gui.sh" />
         <copy file="./bin/unix/run.sh" tofile="${build}/bin/run.sh" />
         <echo>Fixing permissions</echo>
@@ -1331,17 +1332,15 @@
 
     <target name="package-bin-unix">
         <echo>Copying executables</echo>
-        <!--copy file="./bin/unix/bash.script" tofile="${build}/bin/bash.script" filtering="true" />
-        <copy file="./bin/unix/sh.script" tofile="${build}/bin/sh.script" />
-        <copy file="./bin/unix/Realpath" tofile="${build}/bin/Realpath" />
-        <copy file="./bin/unix/Wrapper" tofile="${build}/bin/Wrapper" />
-        <copy file="./bin/unix/Galleon" tofile="${build}/bin/Galleon" /-->
+        <copy file="./bin/unix/galleon" tofile="${build}/bin/galleon" />
+        <copy file="./bin/unix/wrapper-linux-x86-32" tofile="${build}/bin/wrapper-linux-x86-32" />
         <copy file="./bin/unix/run.sh" tofile="${build}/bin/run.sh" />        
         <copy file="./bin/unix/gui.sh" tofile="${build}/bin/gui.sh" />                
-        <chmod file="${build}/bin/*" perm="a+rx" />        
+        <chmod file="${build}/bin/*" perm="a+rx" />
     </target>
 
     <target name="package-misc-unix">
+        <copy file="./bin/unix/Makefile" tofile="${build}/Makefile" />
     </target>
 
     <target name="package-images">
