--- a/galleon/conf/wrapper.conf
+++ b/galleon/conf/wrapper.conf
@@ -16,23 +16,23 @@ wrapper.java.classpath.2=@lib@/*.jar
 wrapper.java.library.path.1=@lib@
 
 # Java Additional Parameters
-@win32comment@wrapper.java.additional.1=-Droot=@root@
-@win32comment@wrapper.java.additional.2=-Dconf=@conf@
-@win32comment@wrapper.java.additional.3=-Dcache=@cache@
-@win32comment@wrapper.java.additional.4=-Dlogfile=@logfile@
-@win32comment@wrapper.java.additional.5=-Dlogs=@logs@
-@win32comment@wrapper.java.additional.6=-Ddata=@data@
-@win32comment@wrapper.java.additional.7=-Dapps=@apps@
-@win32comment@wrapper.java.additional.8=-Dhme=@hme@
-@win32comment@wrapper.java.additional.9=-Dskins=@skins@
-@win32comment@wrapper.java.additional.10=-Dskins=@bin@
+@unixcomment@@win32comment@wrapper.java.additional.1=-Droot=@root@
+@unixcomment@@win32comment@wrapper.java.additional.2=-Dconf=@conf@
+@unixcomment@@win32comment@wrapper.java.additional.3=-Dcache=@cache@
+@unixcomment@@win32comment@wrapper.java.additional.4=-Dlogfile=@logfile@
+@unixcomment@@win32comment@wrapper.java.additional.5=-Dlogs=@logs@
+@unixcomment@@win32comment@wrapper.java.additional.6=-Ddata=@data@
+@unixcomment@@win32comment@wrapper.java.additional.7=-Dapps=@apps@
+@unixcomment@@win32comment@wrapper.java.additional.8=-Dhme=@hme@
+@unixcomment@@win32comment@wrapper.java.additional.9=-Dskins=@skins@
+@unixcomment@@win32comment@wrapper.java.additional.10=-Dskins=@bin@
 @unixcomment@@win32comment@wrapper.java.additional.11=-Djava.awt.headless=@headless@
 
 # Initial Java Heap Size (in MB)
-wrapper.java.initmemory=64
+#wrapper.java.initmemory=64
 
 # Maximum Java Heap Size (in MB)
-wrapper.java.maxmemory=64
+wrapper.java.maxmemory=128
 
 # Application parameters.  Add parameters as needed starting from 1
 #wrapper.app.parameter.1=
@@ -46,7 +46,7 @@ wrapper.startup.timeout=120
 wrapper.console.format=LPM
 
 # Log Level for console output.  (See docs for log levels)
-wrapper.console.loglevel=ERROR
+wrapper.console.loglevel=@wrapperconsoleloglevel@
 
 # Log file to use for wrapper output logging.
 wrapper.logfile=@wrapperlog@
