Added BounceScreenSaver to bounce an image around the screen.  Also added a MusicScreenSaver that will show cover art and the track title bouncing around the screen.

--- a/galleon/build.xml
+++ b/galleon/build.xml
@@ -288,6 +288,7 @@
         <copy file="./media/images/widget/playbar_left.png" tofile="${build}/org/lnicholls/galleon/widget/playbar_left.png" />
         <copy file="./media/images/widget/playbar_right.png" tofile="${build}/org/lnicholls/galleon/widget/playbar_right.png" />
         <copy file="./media/images/widget/playbar_shuttle_bottom.png" tofile="${build}/org/lnicholls/galleon/widget/playbar_shuttle_bottom.png" />
+        <copy file="./media/images/widget/tivologo.png" tofile="${build}/org/lnicholls/galleon/widget/tivologo.png" />
         
 
         <jar jarfile="${build}/lib/widgets.jar" compress="yes"
