Added missing activation jar so email app can work.  Also fixed a bug where the special tivo key event during screen saver animation would wake up the screen saver.

--- a/galleon/bin/unix/Makefile
+++ b/galleon/bin/unix/Makefile
@@ -55,6 +55,7 @@ install:
 	chmod a+rwx ${APPDIR}/bin/gui.sh
 	chmod a+rwx ${APPDIR}/bin/galleon
 	chmod a+rwx ${APPDIR}/bin/wrapper*
+	chmod +rw ${CONFDIR}/configure.xml
 	ln -sf ${VARDIR}/apps ${APPDIR}/apps
 	ln -sf ${CONFDIR} ${APPDIR}/conf
 	ln -sf ${VARDIR}/data ${APPDIR}/data
