--- a/galleon/distro/osx/bundles/Configure Galleon.app/Contents/Info.plist
+++ b/galleon/distro/osx/bundles/Configure Galleon.app/Contents/Info.plist
@@ -62,6 +62,7 @@
 			<string>$JAVAROOT/lib/jta-1.1.jar</string>
 			<string>$JAVAROOT/lib/jtidy-8.0-20060801.131059-3.jar</string>
 			<string>$JAVAROOT/lib/log4j-1.2.14.jar</string>
+			<string>$JAVAROOT/lib/activation.jar</string>
 			<string>$JAVAROOT/lib/mail-1.4.jar</string>
 			<string>$JAVAROOT/lib/mediamanager-videoman-0.8.jar</string>
 			<string>$JAVAROOT/lib/MHS-1.6.1-1697.jar</string>
