add iPhoto, still needs some work

--- a/galleon/src/org/lnicholls/galleon/database/.cvsignore
+++ b/galleon/src/org/lnicholls/galleon/database/.cvsignore
@@ -1,19 +1,24 @@
-PlaylistTrack.java
-PersistentValue.java
-PodcastTrack.java
-Playlist.java
-TheaterShowtimes.java
-Movie.java
 Application.java
-Videocast.java
-Video.java
-Playlists.java
-Theater.java
-ShoutcastStation.java
 Audio.java
 Image.java
-Podcast.java
-Thumbnail.java
-VideocastTrack.java
+Imagelist.java
+ImagelistTrack.java
+Imagelists.java
+ImagelistsTrack.java
+ImagelistsTracksManager.java
+Movie.java
+PersistentValue.java
+Playlist.java
+PlaylistTrack.java
+Playlists.java
 PlaylistsTracks.java
+Podcast.java
+PodcastTrack.java
+ShoutcastStation.java
+Theater.java
+TheaterShowtimes.java
+Thumbnail.java
 Version.java
+Video.java
+Videocast.java
+VideocastTrack.java
