--- a/galleon/build.xml
+++ b/galleon/build.xml
@@ -644,7 +644,30 @@
             <fileset dir="./src/org/lnicholls/galleon/apps/iTunes" excludes="*.java" />
         </jar>
         <copy file="${build}/apps/iTunes.jar" tofile="./apps/iTunes.jar" />        
-        
+
+        <copy file="./media/images/photos/icon.png" tofile="${build}/org/lnicholls/galleon/apps/iPhoto/icon.png" />
+        <!-- copy file="./doc/iphotoapp.html" tofile="${build}/org/lnicholls/galleon/apps/iPhoto/help.html" / -->
+        <manifest file="${build}/MANIFEST.MF">
+          <attribute name="Built-By" value="${user.name}"/>
+          <attribute name="Main-Class" value="org.lnicholls.galleon.apps.iPhoto.iPhoto"/>
+          <attribute name="HME-Arguments" value=""/>
+          <attribute name="Title" value="iPhoto"/>
+          <attribute name="ReleaseDate" value="09/10/07"/>
+          <attribute name="Description" value="The iPhoto app allows you to view your iPhoto albums on your TiVo."/>
+          <attribute name="Documentation" value="http://galleon.tv/content/view/24/34/XXX"/>
+          <attribute name="Author" value="John Kohl"/>
+          <attribute name="Email" value="johnkohl@users.sourceforge.net"/>                                                  
+          <attribute name="Homepage" value="http://galleon.tv"/>                                                            
+          <attribute name="Version" value="0.1"/>
+          <attribute name="ConfigurationPanel" value="org.lnicholls.galleon.apps.iPhoto.iPhotoOptionsPanel"/>            
+          <attribute name="Configuration" value="org.lnicholls.galleon.apps.iPhoto.iPhotoConfiguration"/>                      
+          <attribute name="Tags" value="Photos"/>
+        </manifest>
+        <jar jarfile="${build}/apps/iPhoto.jar" compress="yes" manifest="${build}/MANIFEST.MF">
+            <fileset dir="${build}" includes="org/lnicholls/galleon/apps/iPhoto/**"/>
+            <fileset dir="./src/org/lnicholls/galleon/apps/iPhoto" excludes="*.java" />
+        </jar>
+        <copy file="${build}/apps/iPhoto.jar" tofile="./apps/iPhoto.jar" />
         
         <copy file="./media/images/movies/icon.png" tofile="${build}/org/lnicholls/galleon/apps/movies/icon.png" />        
         <copy file="./doc/moviesapp.html" tofile="${build}/org/lnicholls/galleon/apps/movies/help.html" />                
@@ -891,6 +914,13 @@
         <copy file="./media/images/photos/folder_red_open.png" tofile="${build}/skins/photos/folder_red_open.png" />        
         <copy file="./media/images/photos/background.jpg" tofile="${build}/skins/photos/background.jpg" />
         <copy file="./media/images/photos/background_hd.jpg" tofile="${build}/skins/photos/background_hd.jpg" />
+
+        <copy file="./media/images/photos/icon.png" tofile="${build}/skins/iPhoto/icon.png" />        
+        <copy file="./media/images/photos/folder.png" tofile="${build}/skins/iPhoto/folder.png" />        
+        <copy file="./media/images/photos/folder_red_open.png" tofile="${build}/skins/iPhoto/folder_red_open.png" />        
+        <copy file="./media/images/photos/background.jpg" tofile="${build}/skins/iPhoto/background.jpg" />
+        <copy file="./media/images/photos/background_hd.jpg" tofile="${build}/skins/iPhoto/background_hd.jpg" />
+
         <copy file="./media/images/togo/background.jpg" tofile="${build}/skins/togo/background.jpg" />
         <copy file="./media/images/togo/icon.png" tofile="${build}/skins/togo/icon.png" />                
         <copy file="./media/images/togo/yellowball.png" tofile="${build}/skins/togo/yellowball.png" />                
@@ -1001,6 +1031,7 @@
 
         <delete dir="${build}/skins/music" />
         <delete dir="${build}/skins/photos" />        
+        <delete dir="${build}/skins/iPhoto" />        
         <delete dir="${build}/skins/shoutcast" />        
         <delete dir="${build}/skins/togo" />                
         <delete dir="${build}/skins/weather" />                
@@ -1043,6 +1074,12 @@
         <copy file="./media/images/photos/folder_red_open.png" tofile="${build}/skins/photos/folder_red_open.png" />        
         <copy file="./media/images/tivo/burgundy.mpg" tofile="${build}/skins/photos/background.mpg" />        
         <copy file="./media/images/tivo/red_hd.mpg" tofile="${build}/skins/photos/background_hd.mpg" />
+
+        <copy file="./media/images/photos/icon.png" tofile="${build}/skins/iPhoto/icon.png" />        
+        <copy file="./media/images/photos/folder.png" tofile="${build}/skins/iPhoto/folder.png" />        
+        <copy file="./media/images/photos/folder_red_open.png" tofile="${build}/skins/iPhoto/folder_red_open.png" />        
+        <copy file="./media/images/tivo/burgundy.mpg" tofile="${build}/skins/iPhoto/background.mpg" />        
+        <copy file="./media/images/tivo/red_hd.mpg" tofile="${build}/skins/iPhoto/background_hd.mpg" />
         
         <copy file="./media/images/togo/background.jpg" tofile="${build}/skins/togo/background.jpg" />
         <copy file="./media/images/togo/icon.png" tofile="${build}/skins/togo/icon.png" />                
@@ -1155,6 +1192,7 @@
 
         <delete dir="${build}/skins/music" />
         <delete dir="${build}/skins/photos" />        
+        <delete dir="${build}/skins/iPhoto" />        
         <delete dir="${build}/skins/shoutcast" />        
         <delete dir="${build}/skins/togo" />                
         <delete dir="${build}/skins/weather" />                
