--- a/galleon/src/org/lnicholls/galleon/database/.cvsignore
+++ b/galleon/src/org/lnicholls/galleon/database/.cvsignore
@@ -4,7 +4,7 @@ Image.java
 Imagelist.java
 ImagelistTrack.java
 Imagelists.java
-ImagelistsTrack.java
+ImagelistsTracks.java
 ImagelistsTracksManager.java
 Movie.java
 PersistentValue.java
