--- a/galleon/.classpath
+++ b/galleon/.classpath
@@ -24,7 +24,7 @@
 	<classpathentry kind="lib" path="lib/derby-10.2.2.0.jar"/>
 	<classpathentry kind="lib" path="lib/derbynet-10.2.2.0.jar"/>
 	<classpathentry kind="lib" path="lib/derbytools-10.2.2.0.jar"/>
-	<classpathentry kind="lib" path="lib/hme-host-sample-1.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jmdns-1.0.jar" sourcepath="/JmDNS"/>
 	<classpathentry kind="lib" path="lib/hme-1.4.jar" sourcepath="C:/java/hme_sdk_1.4/src"/>
 	<classpathentry kind="lib" path="lib/odmg.jar"/>
 	<classpathentry kind="lib" path="lib/yahoo_search-2.0.1.jar"/>
@@ -56,6 +56,7 @@
 	<classpathentry kind="lib" path="lib/antlr-2.7.6.jar"/>
 	<classpathentry kind="lib" path="lib/commons-betwixt-0.6.jar"/>
 	<classpathentry kind="lib" path="lib/htmlparser-1.6.jar"/>
+	<classpathentry kind="lib" path="lib/hme-host-sample-1.4.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/jdbc2_0-stdext.jar"/>
 	<classpathentry kind="lib" path="lib/concurrent.jar"/>
