--- a/galleon/conf/wrapper.conf
+++ b/galleon/conf/wrapper.conf
@@ -10,7 +10,9 @@ wrapper.java.mainclass=org.lnicholls.galleon.server.ServiceWrapper
 # Java Classpath (include wrapper.jar)  Add class path elements as
 #  needed starting from 1
 wrapper.java.classpath.1=@conf@
-wrapper.java.classpath.2=@lib@/*.jar
+#JmDNS needs to be first, it replaces the older version in hme-host-sample-1.4.jar
+wrapper.java.classpath.2=@lib@/jmdns-1.0.jar
+wrapper.java.classpath.3=@lib@/*.jar
 
 # Java Library Path (location of Wrapper.DLL or libwrapper.so)
 wrapper.java.library.path.1=@lib@
