fixes for OSX builds

--- a/galleon/distro/osx/Description.plist
+++ b/galleon/distro/osx/Description.plist
@@ -3,8 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>IFPkgDescriptionDescription</key>
-	<string>Galleon installer.
-</string>
+	<string>Galleon installer.</string>
 	<key>IFPkgDescriptionTitle</key>
 	<string>Galleon</string>
 </dict>
