added java parameter to prefer IPv4

--- a/galleon/conf/wrapper.conf
+++ b/galleon/conf/wrapper.conf
@@ -18,6 +18,7 @@ wrapper.java.classpath.3=@lib@/*.jar
 wrapper.java.library.path.1=@lib@
 
 # Java Additional Parameters
+wrapper.java.additional.1=-Djava.net.preferIPv4Stack=true
 @unixcomment@@win32comment@wrapper.java.additional.1=-Droot=@root@
 @unixcomment@@win32comment@wrapper.java.additional.2=-Dconf=@conf@
 @unixcomment@@win32comment@wrapper.java.additional.3=-Dcache=@cache@
